<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> 

    <PreferenceCategory
            android:title="Uploader Appender Preferences">
        <aethers.notebook.core.ui.NonPersistingButtonPreference
                android:key="RegisterButton"
                android:title="Register"
                android:summary="Register with the server" />
        <ListPreference
                android:key="@string/Preferences_connectionType"
                android:title="Upload when"
                android:summary="Select the connection types to allow uploads during"
                android:defaultValue="@string/Preferences_connectionType_default" />
        <!--<EditTextPreference
                android:key="@string/Preferences_url"
                android:title="URL"
                android:summary="The URL to upload logs to"
                android:defaultValue="@string/Preferences_url_default" />-->
        <EditTextPreference
                android:key="@string/Preferences_maxFileSize"
                android:title="Log File Size"
                android:summary="Maximum size of file to log before uploading (in Kb)"
                android:defaultValue="@string/Preferences_maxFileSize_default"
                android:inputType="phone" />
        <!--<aethers.notebook.core.ui.PersistingButtonPreference
	            android:key="@string/Preferences_logDirectory"
	            android:title="Log Directory"
	            android:summary="Filesystem directory to store logs in"
	            android:defaultValue="@string/logDirectory_default" />-->
	    <CheckBoxPreference 
	           android:key="@string/Preferences_deleteUploadedFiles"
	           android:title="Delete Uploaded Files"
	           android:summary="Should files be deleted after upload"
	           android:defaultValue="@string/Preferences_deleteUploadedFiles_default" />
	    <EditTextPreference
	           android:key="@string/Preferences_maxFiles"
	           android:title="Maximum Files"
	           android:summary="Maximum number of files to store"
	           android:defaultValue=""
	           android:inputType="phone" /> 
    </PreferenceCategory>
                
</PreferenceScreen>
